--- a/angularApp/src/app/reg/reg.component.html
+++ b/angularApp/src/app/reg/reg.component.html
@@ -2,17 +2,20 @@
    
     <div class="container">
       <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <input type="text" [(ngModel)]="dataFromInput.Username" placeholder="Enter Username" name="uname" required >
   
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" [(ngModel)]="dataFromInput.Password" placeholder="Enter Password" name="psw" required>
+
+      <label for="rpsw"><b>Password</b></label>
+      <input type="password" [(ngModel)]="dataFromInput.ConfirmPassword" placeholder="Enter ConfirmPassword" name="rpsw" required>
 
       <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="text" [(ngModel)]="dataFromInput.Email"  placeholder="Enter Email" name="email" required>
 
       <label for="bdate"><b>Date</b></label>
-      <input type="text" placeholder="dd-mm-yyy" name="bdate" required>
+      <input type="text" [(ngModel)]="dataFromInput.Date" placeholder="dd-mm-yyy" name="bdate" required>
   
-      <button type="submit">Register</button>
+      <button (click)="callPost()">Register</button>
     </div>
   </form>
