WebSocket rade sa Owin, i dodata Register forma

--- a/angularApp/src/app/reg/reg.component.html
+++ b/angularApp/src/app/reg/reg.component.html
@@ -1,21 +1,21 @@
-<form action="action_page.php">
-   
-    <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" [(ngModel)]="dataFromInput.Username" placeholder="Enter Username" name="uname" required >
+<form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
   
-      <label for="psw"><b>Password</b></label>
-      <input type="password" [(ngModel)]="dataFromInput.Password" placeholder="Enter Password" name="psw" required>
+   <div class="container">
+     <label for="Username"><b>Username</b></label>
+     <input id="Username" type="text" placeholder="Enter Username" name="Username" ngModel required #Username = "ngModel">
+ 
+     <label for="Password"><b>Password</b></label>
+     <input id="Password" type="password" placeholder="Enter Password" name="Password" ngModel  required #Password = "ngModel">
 
-      <label for="rpsw"><b>Password</b></label>
-      <input type="password" [(ngModel)]="dataFromInput.ConfirmPassword" placeholder="Enter ConfirmPassword" name="rpsw" required>
+     <label for="ConfirmPassword"><b>Password</b></label>
+     <input id="ConfirmPassword" type="password"  placeholder="Enter ConfirmPassword" name="ConfirmPassword" ngModel  required #ConfirmPassword = "ngModel">
 
-      <label for="email"><b>Email</b></label>
-      <input type="text" [(ngModel)]="dataFromInput.Email"  placeholder="Enter Email" name="email" required>
+     <label for="Email"><b>Email</b></label>
+     <input id="Email" type="text"   placeholder="Enter Email" name="Email" ngModel  required #Email = "ngModel">
 
-      <label for="bdate"><b>Date</b></label>
-      <input type="text" [(ngModel)]="dataFromInput.Date" placeholder="dd-mm-yyy" name="bdate" required>
-  
-      <button (click)="callPost()">Register</button>
-    </div>
-  </form>
+     <label for="Date"><b>Date</b></label>
+     <input id="Date" type="text" placeholder="dd-mm-yyy" name="Date" ngModel  required #Date = "ngModel">
+ 
+     <button type="submit">Register</button>
+   </div>
+ </form>
