--- a/angularApp/src/app/app.component.html
+++ b/angularApp/src/app/app.component.html
@@ -4,7 +4,7 @@
     <li><a [routerLink]="['/home']">Home</a></li>
     <li><a [routerLink]="['/login']">Log In</a></li>
     <li><a [routerLink]="['/reg']">Register</a></li>
-   <!-- <li><a [routerLink]="['/clock']">Clock</a></li> -->
+    <li><a [routerLink]="['/clock']">Clock</a></li>
     <li style="float:right"><a [routerLink]="['/profile']">Profile</a></li>
   </ul>
 
