login,register,guard,interceptor

--- a/angularApp/src/app/app.component.html
+++ b/angularApp/src/app/app.component.html
@@ -5,6 +5,7 @@
     <li><a [routerLink]="['/login']">Log In</a></li>
     <li><a [routerLink]="['/reg']">Register</a></li>
     <li><a [routerLink]="['/clock']">Clock</a></li>
+    <li><a [routerLink]="['/ser']">Services</a></li>
     <li style="float:right"><a [routerLink]="['/profile']">Profile</a></li>
   </ul>
 
