--- a/angularApp/src/app/login/login.component.html
+++ b/angularApp/src/app/login/login.component.html
@@ -1,11 +1,11 @@
-<form action="action_page.php">
+<form #f="ngForm" (ngSubmit)="callTokens(f.value)">
    
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <label for="Username"><b>Username</b></label>
+      <input id="Username" type="text" placeholder="Enter Username" name="Username" ngModel required #Username = "ngModel">
   
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <label for="Passwrod"><b>Password</b></label>
+      <input id="Passwrod" type="password" placeholder="Enter Password" name="Password" ngModel required #Password = "ngModel">
   
       <button type="submit">Login</button>
     </div>
