--- a/angularApp/src/app/app.component.html
+++ b/angularApp/src/app/app.component.html
@@ -1,11 +1,10 @@
+<clock-component></clock-component>
 <h1>
-
   <ul>
-    <li><a [routerLink]="['/home']">Home</a></li>
+    <li><a [routerLink]="['/']">Services</a></li>
     <li><a [routerLink]="['/login']">Log In</a></li>
     <li><a [routerLink]="['/reg']">Register</a></li>
-    <li><a [routerLink]="['/clock']">Clock</a></li>
-    <li><a [routerLink]="['/ser']">Services</a></li>
+    <li><a [routerLink]="['/map']">Map</a></li>
     <li style="float:right"><a [routerLink]="['/profile']">Profile</a></li>
   </ul>
 
