--- a/angularApp/src/app/ser/ser.component.html
+++ b/angularApp/src/app/ser/ser.component.html
@@ -1,8 +1,8 @@
-<p>
-  ser works!
-</p>
+<p>All Services:</p>
 <ul>
   <li *ngFor="let service of services">
-   {{service.Name}}
+    <p>Name: {{service.Name}}</p>
+    <p>Email: {{service.Email}}</p>
+    <p>Description: {{service.Description}}</p>
   </li>
  </ul>
