Prikaz i izmena profila

--- a/angularApp/src/app/profile/profile.component.html
+++ b/angularApp/src/app/profile/profile.component.html
@@ -1,4 +1,30 @@
-<p>
-  profile works!
-  <button (click)="logOut()">Log Out</button>
-</p>
+
+   <div class="container" >
+     <label for="Email"><b>Email</b></label> 
+     <input id="Email" type="text" [(ngModel)]="appUser.Email"/>
+    <br>
+     <label for="FullName"><b>FullName</b></label>
+     <input id="FullName" type="text" [(ngModel)]="appUser.FullName"/>
+     <br>
+     <label for="Birthday"><b>Birthday</b></label>
+     <input id="Birthday" type="text" [(ngModel)]="appUser.Birthday"/>
+     <br>
+     <label for="Activated"><b>Activated</b></label>
+     <input id="Activated" type="text" [(ngModel)]="appUser.Activated"/>
+     <br>
+     <label for="PersonalDocument"><b>PersonalDocument</b></label> 
+     <input id="PersonalDocument" type="text" [(ngModel)]="appUser.PersonalDocument"/>
+     <br>
+     <label for="Rents"><b>Rents</b></label>
+    <ul>
+    <li *ngFor="let rent of appUser.Renting">
+        <p>rent: {{rent.Id}}</p>
+    </li> 
+    </ul>   
+    <br>
+     <button (click)="logOut()">Log Out</button>
+     <button (click)="saveChanges()">Save Changes</button>
+   </div>
+
+  
+
