--- a/angularApp/src/app/app.component.html
+++ b/angularApp/src/app/app.component.html
@@ -4,6 +4,7 @@
     <li><a [routerLink]="['/']">Services</a></li>
     <li><a [routerLink]="['/login']">Log In</a></li>
     <li><a [routerLink]="['/reg']">Register</a></li>
+    <li><a [routerLink]="['/rent']">Rent</a></li>
     <li><a [routerLink]="['/map']">Map</a></li>
     <li style="float:right"><a [routerLink]="['/profile']">Profile</a></li>
   </ul>
