--- a/angularApp/src/app/app.component.html
+++ b/angularApp/src/app/app.component.html
@@ -1,14 +1,14 @@
-<clock-component></clock-component>
-<h1>
-  <ul>
-    <li><a [routerLink]="['/']">Services</a></li>
-    <li><a [routerLink]="['/login']">Log In</a></li>
-    <li><a [routerLink]="['/reg']">Register</a></li>
-    <li><a [routerLink]="['/rent']">Rent</a></li>
-    <li><a [routerLink]="['/map']">Map</a></li>
-    <li style="float:right"><a [routerLink]="['/profile']">Profile</a></li>
-  </ul>
 
-  <router-outlet></router-outlet>
-</h1>
+  <div>
+    <ul>
+      <li><a [routerLink]="['/']">Services</a></li>
+      <li><a [routerLink]="['/login']">Log In</a></li>
+      <li><a [routerLink]="['/reg']">Register</a></li>
+      <li><a [routerLink]="['/rent']">Rent</a></li>
+      <li><a [routerLink]="['/map']">Branches Map</a></li>
+      <li style="float:right"><a [routerLink]="['/profile']">Profile</a></li>
+    </ul>
+  </div>
 
+
+<router-outlet></router-outlet>
