--- a/angularApp/src/app/login/login.component.html
+++ b/angularApp/src/app/login/login.component.html
@@ -1,12 +1,12 @@
 <form #f="ngForm" (ngSubmit)="callTokens(f.value)">
    
-    <div class="container">
-      <label for="Username"><b>Username</b></label>
+    <div>
+      <label for="Username"><b>Username: </b></label>
       <input id="Username" type="text" placeholder="Enter Username" name="Username" ngModel required #Username = "ngModel">
-  
-      <label for="Passwrod"><b>Password</b></label>
+      <br>
+      <label for="Passwrod"><b>Password: </b></label>
       <input id="Passwrod" type="password" placeholder="Enter Password" name="Password" ngModel required #Password = "ngModel">
-  
+      <br>
       <button type="submit">Login</button>
     </div>
   </form>
