--- a/angularApp/src/app/profile/profile.component.html
+++ b/angularApp/src/app/profile/profile.component.html
@@ -1,18 +1,18 @@
 
-   <div class="container" >
-     <label for="Email"><b>Email</b></label> 
+   <div >
+     <label for="Email"><b>Email: </b></label> 
      <input id="Email" type="text" [(ngModel)]="appUser.Email"/>
     <br>
-     <label for="FullName"><b>FullName</b></label>
+     <label for="FullName"><b>FullName: </b></label>
      <input id="FullName" type="text" [(ngModel)]="appUser.FullName"/>
      <br>
-     <label for="Birthday"><b>Birthday</b></label>
+     <label for="Birthday"><b>Birthday: </b></label>
      <input id="Birthday" type="text" [(ngModel)]="appUser.Birthday"/>
      <br>
-     <label for="Activated"><b>Activated</b></label>
+     <label for="Activated"><b>Activated: </b></label>
      <input id="Activated" type="text" [(ngModel)]="appUser.Activated"/>
      <br>
-     <label for="PersonalDocument"><b>PersonalDocument</b></label> 
+     <label for="PersonalDocument"><b>PersonalDocument: </b></label> 
      <input id="PersonalDocument" type="text" [(ngModel)]="appUser.PersonalDocument"/>
      <br>
      <label for="Rents"><b>Rents</b></label>
