--- a/angularApp/src/app/reg/reg.component.html
+++ b/angularApp/src/app/reg/reg.component.html
@@ -1,24 +1,27 @@
 <form #f="ngForm" (ngSubmit)="onSubmit(f.value)">
-  
-   <div>
-      <label for="FullName"><b>FullName: </b></label>
-      <input id="FullName" type="text" placeholder="Enter FullName" name="FullName" ngModel required #FullName = "ngModel">
-      <br>
-     <label for="Username"><b>Username: </b></label>
-     <input id="Username" type="text" placeholder="Enter Username" name="Username" ngModel required #Username = "ngModel">
-     <br>
-     <label for="Password"><b>Password: </b></label>
-     <input id="Password" type="password" placeholder="Enter Password" name="Password" ngModel  required #Password = "ngModel">
-     <br>
-     <label for="ConfirmPassword"><b>Confirm Password: </b></label>
-     <input id="ConfirmPassword" type="password"  placeholder="Enter ConfirmPassword" name="ConfirmPassword" ngModel  required #ConfirmPassword = "ngModel">
-     <br>
-     <label for="Email"><b>Email: </b></label>
-     <input id="Email" type="text"   placeholder="Enter Email" name="Email" ngModel  required #Email = "ngModel">
-     <br>
-     <label for="Date"><b>Date: </b></label>
-     <input id="Date" type="text" placeholder="dd-mm-yyy" name="Date" ngModel  required #Date = "ngModel">
-     <br>
-     <button type="submit">Register</button>
-   </div>
- </form>
+  <div class="container">
+     <!--<label for="FullName"><b>FullName: </b></label>
+    <input id="FullName" type="text" placeholder="Enter FullName" name="FullName" ngModel required #FullName = "ngModel">-->
+    <div class="input-group ">
+      <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-user"></i></span>
+      <input id="FullName" type="text" style="width:fit-content" class="form-control" placeholder="FullName" name="FullName" ngModel required #FullName = "ngModel" aria-describedby="basic-addon1">
+    </div>
+    <br>
+    <label for="Username"><b>Username: </b></label>
+    <input id="Username" type="text" placeholder="Enter Username" name="Username" ngModel required #Username = "ngModel">
+    <br>
+    <label for="Password"><b>Password: </b></label>
+    <input id="Password" type="password" placeholder="Enter Password" name="Password" ngModel  required #Password = "ngModel">
+    <br>
+    <label for="ConfirmPassword"><b>Confirm Password: </b></label>
+    <input id="ConfirmPassword" type="password"  placeholder="Enter ConfirmPassword" name="ConfirmPassword" ngModel  required #ConfirmPassword = "ngModel">
+    <br>
+    <label for="Email"><b>Email: </b></label>
+    <input id="Email" type="text"   placeholder="Enter Email" name="Email" ngModel  required #Email = "ngModel">
+    <br>
+    <label for="Date"><b>Date: </b></label>
+    <input id="Date" type="text" placeholder="dd-mm-yyy" name="Date" ngModel  required #Date = "ngModel">
+    <br>
+    <button type="submit">Register</button>
+  </div>
+</form>
