--- a/angularApp/src/app/map/map.component.html
+++ b/angularApp/src/app/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p >
+  <p class="container">
       <!-- Kreiramo mapu -->
       <agm-map [latitude]="mapInfo.centerLat" [longitude]="mapInfo.centerLong" [zoom]="18" (mapClick)="placeMarker($event)">
       
