--- a/angularApp/src/app/branch/branch.component.html
+++ b/angularApp/src/app/branch/branch.component.html
@@ -1,47 +1,68 @@
-<p>Add Branch</p>
-<br>
-<form #f="ngForm" (ngSubmit)="addBranch(f.value)">
+
+<form class="container" #f="ngForm" (ngSubmit)="addBranch(f.value)">
    <div>
-      <label for="Logo"><b>Service:</b></label>
-     <select id="ServiceName" ngModel #ServiceName="ngModel" name="ServiceName">
-        <option *ngFor="let item of services" [value]="item.Name" id="ServiceName" name="ServiceName">{{item.Name}}</option>
-     </select>
-     <br>
-      <label for="Logo"><b>Name: </b></label>
-      <input id="Logo" type="text" placeholder="Enter Logo" name="Logo" ngModel required #Logo = "ngModel">
+      <label>Add Branch:</label>
       <br>
-     <label for="Latitude"><b>Logo: </b></label>
-     <input id="Latitude" type="text" placeholder="Enter Latitude" name="Latitude" ngModel required #Latitude = "ngModel">
-     <br>
-     <label for="Longitude"><b>Email: </b></label>
-     <input id="Longitude" type="text" placeholder="Enter Longitude" name="Longitude" ngModel  required #Longitude = "ngModel">
-     <br>
-     <label for="Address"><b>Description: </b></label>
-     <input id="Address" type="text"  placeholder="Enter Address" name="Address" ngModel  required #Address = "ngModel">
-     <br>
-     <button type="submit">Add Branch</button>
+        <label>Service:</label>
+          <select id="ServiceName" ngModel #ServiceName="ngModel" name="ServiceName">
+              <option *ngFor="let item of services" [value]="item.Name" id="ServiceName" name="ServiceName">{{item.Name}}</option>
+          </select>
+      
+        <br>
+      <div class="input-group ">
+        <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-user"></i></span>
+        <input id="Logo" type="text" style="width:fit-content" class="form-control" placeholder="Enter Logo" name="Logo" ngModel required #Logo = "ngModel" aria-describedby="basic-addon1">
+      </div>
+
+      <div class="input-group ">
+        <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-map-marker"></i></span>
+        <input id="Latitude" type="text" style="width:fit-content" class="form-control" placeholder="Enter Latitude" name="Latitude" ngModel required #Latitude = "ngModel" aria-describedby="basic-addon1">
+      </div>
+
+     <div class="input-group ">
+      <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-map-marker"></i></span>
+      <input id="Longitude" type="text" style="width:fit-content" class="form-control" placeholder="Enter Longitude" name="Longitude" ngModel required #Longitude = "ngModel" aria-describedby="basic-addon1">
+     </div>
+
+     <div class="input-group ">
+      <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-home"></i></span>
+      <input id="Address" type="text" style="width:fit-content" class="form-control" placeholder="Enter Address" name="Address" ngModel required #Address = "ngModel" aria-describedby="basic-addon1">
+     </div>
+
+     <button class="btn btn-lg btn-primary " type="submit">Add Branch</button>
    </div>
  </form>
 <br>
 <br>
-<p>All Branches:</p>
-<ul>
-  <li *ngFor="let branchs of branches; let i = index">
-    <label>Logo: </label>
-    <input type="text" [(ngModel)]="branchs.Logo"/>
-    <br>
-    <label>Latitude: </label>
-    <input type="text" [(ngModel)]="branchs.Latitude"/>
-    <br>
-    <label>Longitude: </label>
-    <input type="text" [(ngModel)]="branchs.Longitude"/>
-    <br>
-    <label>Address: </label>
-    <input type="text" [(ngModel)]="branchs.Address"/>
-    <br>
-    <button *ngIf="checkRole()" (click)="deleteBranch(branchs.Id)">Delete </button>
-    <button *ngIf="checkRole()" (click)="saveBranch(i)">Save </button>
-    <br>
-    <br>
-  </li>
-</ul>
+<div class="container">
+    <label><b>All Branches:</b></label>
+    <ul class="container">
+        <li *ngFor="let branchs of branches; let i = index">
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-user"></i></span>
+            <input type="text" [(ngModel)]="branchs.Logo">
+          </div>
+         
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-map-marker"></i></span>
+            <input type="text" [(ngModel)]="branchs.Latitude">
+          </div>
+      
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-map-marker"></i></span>
+            <input type="text" [(ngModel)]="branchs.Longitude">
+          </div>
+      
+          <div class="input-group ">
+            <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-home"></i></span>
+            <input type="text" [(ngModel)]="branchs.Address">
+           </div>
+      
+          <button class="btn btn-lg btn-primary " *ngIf="checkRole()" (click)="deleteBranch(branchs.Id)">Delete </button>
+          <button class="btn btn-lg btn-primary " *ngIf="checkRole()" (click)="saveBranch(i)">Save </button>
+          <br>
+          <br>
+        </li>
+      </ul>
+</div>
+
