add, edit, delete vehicle i typeofvehicle

--- a/angularApp/src/app/app.component.html
+++ b/angularApp/src/app/app.component.html
@@ -25,6 +25,8 @@
           <li><a [routerLink]="['/reg']">Register</a></li>
           <li><a [routerLink]="['/rent']">Rent</a></li>
           <li><a [routerLink]="['/map']">Map</a></li>
+          <li><a [routerLink]="['/vehicle']">Vehicles</a></li>
+          <li><a [routerLink]="['/tov']">Types</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
           <li><a [routerLink]="['/profile']">Profile</a></li>
