--- a/angularApp/src/app/login/login.component.html
+++ b/angularApp/src/app/login/login.component.html
@@ -8,10 +8,10 @@
        
         <div class="input-group ">
           <span class="input-group-addon" id="basic-addon1"><i class="glyphicon glyphicon-lock"></i></span>
-          <input id="Passwrod" type="text" style="width:fit-content" class="form-control" placeholder="Enter Passwrod" name="Passwrod" ngModel required #Passwrod = "ngModel" aria-describedby="basic-addon1">
+          <input id="Password" type="password" style="width:fit-content" class="form-control" placeholder="Enter Password" name="Password" ngModel required #Password = "ngModel" aria-describedby="basic-addon1">
         </div>
         
-        <button class="btn btn-lg btn-primary " type="submit">Login</button>
+        <button class="btn btn-primary " type="submit">Login</button>
       </div>
     </form>
 </div>
