--- a/angularApp/src/app/reg/reg.component.html
+++ b/angularApp/src/app/reg/reg.component.html
@@ -30,6 +30,6 @@
       <input id="Date" type="text" style="width:fit-content" class="form-control" placeholder="Enter Date" name="Date" ngModel required #Date = "ngModel" aria-describedby="basic-addon1">
     </div>
 
-    <button class="btn btn-lg btn-primary " type="submit">Register</button>
+    <button class="btn btn-primary " type="submit">Register</button>
   </div>
 </form>
