--- a/angularApp/src/app/branch/branch.component.html
+++ b/angularApp/src/app/branch/branch.component.html
@@ -58,7 +58,7 @@
             <input type="text" [(ngModel)]="branchs.Address">
            </div>
       
-          <button class="btn btn-primary "  (click)="deleteBranch(branchs.Id)">Delete </button>
+          <button class="btn btn-danger "  (click)="deleteBranch(branchs.Id)">Delete </button>
           <button class="btn btn-primary "  (click)="saveBranch(i)">Save </button>
           <br>
           <br>
